--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "vite": "^5.1.4"
   },
   "dependencies": {
+    "@world-in-hand-controls/threejs-world-in-hand": "^0.0.7",
     "lil-gui": "^0.19.1",
     "three": "^0.161.0"
   }
