--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "threejs-starter-vite",
+  "name": "wih-navigation-website",
   "private": true,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
